<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp"
    android:scrollbars="vertical"

    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
android:background=" #0CB655"
        android:scaleType="centerCrop"
        android:src="@drawable/images__12_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/start"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:layout_marginTop="24dp"
      android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/start"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />




<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal"

   android:paddingBottom="10dp"
   >

    <LinearLayout
        android:layout_width="wrap_content"
android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_height="match_parent"
        android:orientation="vertical"
       android:gravity="center"
        android:layout_marginStart="35dp"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/bmi"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/background_on_start"
            android:backgroundTint="#4E6E81"
            android:text="@string/bmi"
            android:textSize="24sp"

            app:rippleColor="#94AF9F" />

        <TextView
            android:id="@+id/calCulate_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/calculate_bmi1"
            android:textSize="25sp"
            android:textStyle="bold"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_height="match_parent"
       android:gravity="center"
        android:layout_marginEnd="35dp"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <Button
            android:id="@+id/history"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/background_on_start"
            android:backgroundTint="#4E6E81"
            android:text="@string/History"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/Btn_History"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/history"
            android:textSize="25sp"
            android:textStyle="bold"
            />

    </LinearLayout>






</RelativeLayout>


</LinearLayout>
