<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="#E4DCCF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure"
            android:textSize="25sp"
            android:textStyle="bold"
          android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/if_you_go_back_now_you_will_loose_your_current_exercise"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_No"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
               android:layout_alignParentEnd="true"/>

            <Button
                android:id="@+id/btn_Yes"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:text="@string/yes"

                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>